# GazeTheWeb

./: .gitignore  .gitmodules  README.md
Browse/: README.md  (+1 more)
Browse/Client/: CMakeLists.txt  Client.VisualElementsManifest.xml  LICENSE  README.in  README.md  Resources.rc  VERSION.in
Browse/Client/common/LabStream/: LabStream.cpp  LabStream.h
Browse/Client/content/: CMakeLists.txt
Browse/Client/content/bricks/: CalibrationDisplayBadPoint.beyegui  CalibrationDisplayFailedPoint.beyegui  CalibrationDisplayOkPoint.beyegui  Cursor.beyegui  History.beyegui  HistoryFlow.beyegui  Nothing.beyegui  Notification.beyegui  TabScrollDownOverlay.beyegui  TabScrollDownProgress.beyegui  TabScrollUpOverlay.beyegui  TabScrollUpProgress.beyegui  URLInputBookmark.beyegui  URLInputBookmarksFlow.beyegui  WebTabEmptyPreview.beyegui  WebTabNew.beyegui  WebTabPreview.beyegui
Browse/Client/content/configuration/: Global.ceyegui
Browse/Client/content/dictionaries/: EnglishUS.dic  NewEnglishUS.dic
Browse/Client/content/javascript/: backup.mutationobserver.js  dom_attributes.js  dom_fill_arrays.js  dom_fixed_elements.js  dom_mutationobserver.js  dom_mutationobserver.js.orig  dom_nodes.js  dom_nodes_helpers.js  dom_nodes_interaction.js  favicon_copy_img_bytes_to_v8array.js  favicon_create_img.js  helpers.js  mutation_observer_test.js  mutation_observer_test.js.orig
Browse/Client/content/layouts/: Empty.xeyegui  History.xeyegui  Overlay.xeyegui  Pause.xeyegui  Settings.xeyegui  SettingsAdBlocking.xeyegui  SettingsGeneral.xeyegui  SettingsInfo.xeyegui  Splash.xeyegui  Super.xeyegui  SuperCalibration.xeyegui  Tab.xeyegui  TabDebug.xeyegui  TabPipelineAbort.xeyegui  TabVideoMode.xeyegui  TabVideoModePauseOverlay.xeyegui  URLInput.xeyegui  URLInputBookmarks.xeyegui  Web.xeyegui  WebTabOverview.xeyegui
Browse/Client/content/localizations/: English.leyegui  Greek.leyegui  Hebrew.leyegui
Browse/Client/content/stylesheets/: Demo.seyegui  Global.seyegui
Browse/Client/content/template/: ._template.html  template.html
Browse/Client/content/websites/: index.html  link.html
Browse/Client/docs/: Changelog.txt  Pages.txt  TODO-Daniel.txt  TODO-Raphael.txt  TODO.txt  TODO.txt.orig
Browse/Client/docs/GMail Support/: Notes.txt
Browse/Client/plugins/: test.cpp
Browse/Client/src/: Arguments.cpp  Arguments.h  Global.h  JSMailer.h  Master.cpp  Master.h  MasterNotificationInterface.h  MasterThreadsafeInterface.h  Setup.h  Typedefs.h  main.cpp  main_linux.h  main_windows.h
Browse/Client/src/CEF/: App.cpp  App.h  BrowserMsgRouter.cpp  BrowserMsgRouter.h  CefMediator.cpp  CefMediator.h  DevToolsHandler.cpp  DevToolsHandler.h  Handler.cpp  Handler.h  ImageDownload.cpp  ImageDownload.h  JSCode.cpp  JSCode.h  JSDialogHandler.cpp  JSDialogHandler.h  JavaScriptDialogType.h  MainCefApp.cpp  MainCefApp.h  Mediator.cpp  Mediator.h  MessageRouter.cpp  MessageRouter.h  ProcessTypeGetter.cpp  ProcessTypeGetter.h  RenderProcessHandler.cpp  RenderProcessHandler.h  Renderer.cpp  Renderer.h  RendererMsgRouter.h  RequestHandler.cpp  RequestHandler.h
Browse/Client/src/Input/: EyeInput.cpp  EyeInput.h  EyeTrackerStatus.h  Input.h  TabInput.h  VoiceInput.cpp  VoiceInput.h
Browse/Client/src/LabStream/: LabStream.cpp
Browse/Client/src/Master/: Master.cpp  Master.h  MasterNotificationInterface.h  MasterThreadsafeInterface.h
Browse/Client/src/Singletons/: FirebaseMailer.cpp  FirebaseMailer.h  JSMailer.cpp  JSMailer.h  LabStreamMailer.cpp  LabStreamMailer.h
Browse/Client/src/State/: State.cpp  State.h
Browse/Client/src/Utils/: Framebuffer.cpp  Framebuffer.h  Helper.cpp  Helper.h  Input.h  LerpValue.h  Logger.cpp  Logger.h  MakeUnique.h  Primitive.cpp  Primitive.h  PrimitiveRenderItem.cpp  PrimitiveRenderItem.h  Quad.cpp  Quad.h  QuadRenderItem.cpp  QuadRenderItem.h  Rect.h  RenderItem.cpp  RenderItem.h  Shader.cpp  Shader.h  TabInput.h  Texture.cpp  Texture.h  glmWrapper.h
Browse/Prototype/: CMakeLists.txt  README.md
Browse/Prototype/content/bricks/: InputButton.beyegui
Browse/Prototype/main/: main_linux.cpp  main_windows.cpp
Browse/Prototype/src/: EntryPoint.h  EyetrackerInput.h  SimpleApp.cpp  SimpleApp.h  SimpleHandler.cpp  SimpleHandler.h  SimpleRenderProcessHandler.cpp  SimpleRenderProcessHandler.h  SimpleRenderer.cpp  SimpleRenderer.h  TextInput.cpp  TextInput.h  WebView.cpp  WebView.h
BrowseUpdater/: CMakeLists.txt  README.md
BrowseUpdater/src/: main.cpp
Tweet/: CMakeLists.txt  README.md
Tweet/content/: close_screen.xeyegui  layout_Keyboard.xeyegui  layout_Wall.xeyegui  login_layout.xeyegui  test.xeyegui
Tweet/content/bricks/: actionbuttonbrick.beyegui  deleteButton.beyegui  dislikeButton.beyegui  followButton.beyegui  goToProfileButton.beyegui  leftswitchButton.beyegui  likeButton.beyegui  menueBarBrick.beyegui  respondButton.beyegui  retweetButton.beyegui  rightswitchButton.beyegui  searchForButton.beyegui  showImageButton.beyegui  testbrick.beyegui  unfollowButton.beyegui  writePNButton.beyegui
Tweet/content/dict/: dutch.txt  ger.txt
Tweet/content/login_bricks/: left_button_area.beyegui  middle_button_area.beyegui  right_button_area.beyegui
Tweet/content/style/: stylesheet.seyegui
Tweet/src/: Framebuffer.h  Input.cpp  Input.h  LICENSE  TwitterApp.cpp  TwitterApp.h  main.cpp
Tweet/src/Buttons/: ActionBarButton.cpp  ActionBarButton.h  ConnectButton.cpp  ConnectButton.h  DiscoverButton.cpp  DiscoverButton.h  ImageFrameButton.cpp  ImageFrameButton.h  KeyboardButton.cpp  KeyboardButton.h  MenueBarButton.cpp  MenueBarButton.h  ProfileButton.cpp  ProfileButton.h  SearchButton.cpp  SearchButton.h  SwitchButton.cpp  SwitchButton.h  WallButton.cpp  WallButton.h
Tweet/src/Eyetracker/: SMI.cpp  SMI.h  Tobii.cpp  Tobii.h
Tweet/src/Interface_Elements/: ActionBar.cpp  ActionBar.h  Element.cpp  Element.h  MenueBar.cpp  MenueBar.h
Tweet/src/Keyboard/: Keyboard.cpp  Keyboard.h
Tweet/src/LoginArea/: CloseScreenButtons.cpp  CloseScreenButtons.h  Login.cpp  Login.h  LoginButton.cpp  LoginButton.h
Tweet/src/TwitterClient/: ImageDownload.cpp  ImageDownload.h  TwitterClient.cpp  TwitterClient.h
(+292 files in other folders)
